Source/WebCore: IndexedDB createObjectStore should throw if options arg is invalid Added logic to OptionsObject to determine if an invalid object was created. Javascript bindings now detect invalid OptionsObject's and throw TypeError when found. https://bugs.webkit.org/show_bug.cgi?id=58471

Patch by Eugene Girard <girard@chromium.org> on 2012-02-06
Reviewed by Adam Barth.

Test: storage/indexeddb/createObjectStore-bad-options.html

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateParametersCheck):
* bindings/v8/OptionsObject.cpp:
(WebCore::OptionsObject::isObject):
* bindings/v8/OptionsObject.h:

LayoutTests: IndexedDB createObjectStore should throw if options arg is invalid (not an object).
Added unit tests to test invalid arguments.
storage/indexddb/transaction-basics was modified only to correct calls that would
now throw.
https://bugs.webkit.org/show_bug.cgi?id=58471

Patch by Eugene Girard <girard@chromium.org> on 2012-02-06
Reviewed by Adam Barth.

* storage/indexeddb/create-object-store-options-expected.txt:
* storage/indexeddb/create-object-store-options.html:
* storage/indexeddb/index-basics-expected.txt:
* storage/indexeddb/index-basics.html:
* storage/indexeddb/resources/shared.js:
(evalAndExpectExceptionClass):
* storage/indexeddb/transaction-basics-expected.txt:
* storage/indexeddb/transaction-basics.html:
* storage/indexeddb/tutorial.html:

Canonical link: https://commits.webkit.org/94755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106827 268f45cc-cd09-0410-ab3c-d52691b4dbfc