Source/WebCore/bindings/scripts/CodeGeneratorV8.pm
@@ -1595,6 +1595,13 @@ sub GenerateParametersCheck
             }
             $parameterCheckString .= "    EXCEPTION_BLOCK($nativeType, $parameterName, " .
                  JSValueToNative($parameter, "MAYBE_MISSING_PARAMETER(args, $paramIndex, $parameterMissingPolicy)") . ");\n";
+            if ($nativeType eq 'OptionsObject') {
+               $parameterCheckString .= "    if (args.Length() > $paramIndex && !$parameterName.isUndefinedOrNull() && !$parameterName.isObject()) {\n";
+               $parameterCheckString .= "        ec = TYPE_MISMATCH_ERR;\n";
+               $parameterCheckString .= "        V8Proxy::setDOMException(ec);\n";
+               $parameterCheckString .= "        return throwError(\"Not an object.\", V8Proxy::TypeError);\n";
+               $parameterCheckString .= "    }\n";
+            }
         }
 
         if ($parameter->extendedAttributes->{"IsIndex"}) {
